[package]
name = "hazelprime"
version = "0.1.0"
authors = ["Hazel Victoria Campbell <cargo@orezpraw.com>"]
edition = "2018"

[dependencies]
rug = "1.3"
nom = "4.2"
clap = "~2.32.0"
gmp-mpfr-sys = "1"

[profile.dev]
opt-level = 3
lto = true
incremental = false
codegen-units = 1

[profile.test]
opt-level = 3
lto = true
incremental = false
codegen-units = 1
