[package]
name = "hazelprime"
version = "0.1.0"
authors = ["Hazel Victoria Campbell <cargo@orezpraw.com>"]
edition = "2018"

[workspace]

[dependencies]
rug = "1.3"
nom = "4.2"
clap = "~2.32.0"
gmp-mpfr-sys = "1"
# mulch = { path = "mulch" }
# mulch2 = { path = "mulch2" }
hazelprime-bootstrap = { path = "hazelprime-bootstrap"}
mulch3 = { path = "mulch3" }


# [features]
# bench = []

[profile.dev]
opt-level = 3
lto = true
incremental = false
codegen-units = 1

[profile.test]
opt-level = 3
lto = false
incremental = true
codegen-units = 8

[profile.release]
opt-level = 3
lto = true
incremental = false
codegen-units = 1
